--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,21 @@
+nav {
+    background-color: rgb(17, 104, 104);
+    text-align: right;
+    position: fixed;
+    width: 100%;
+    /* height: 40px; */
+    z-index: 7;
+    padding: 5px;
+    box-shadow: 5px 5px 5px;
+}
 
-.accordion-item:nth-child(n+2) {
-margin: 16px 15px 0 0;
+nav a {
+    text-decoration: none;
+    color: rgb(212, 219, 226);
+    margin: 10px;
+}
+.accordion {
+    text-align: center;
 }
 a {
     color: black;
@@ -12,9 +27,6 @@ body {
 #accordionExample {
     display:flex;
     width: fit-content;
-    /* margin-top: 1%; */
-    position: relative;
-    left: 7%;
 }
 .accordion-button:focus {
     border: none;
@@ -241,8 +253,9 @@ body {
 }
 .accordion-item {
     max-width: 400px;
-    position: relative;
-    left: -20px;
+    margin: 10px;
+    /* position: relative;
+    left: 60px; */
 }
 @keyframes scroll {
     0% {
@@ -618,6 +631,9 @@ body {
     }
 }
 @media screen and (max-width: 576px) {
+    nav {
+        display: none;
+    }
     .titleImg2 {
         transform: skewX(0deg);
         right: 0;
