--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,11 @@ nav a {
     color: rgb(212, 219, 226);
     margin: 10px;
 }
+
+nav a:hover {
+    color: orange;
+}
+
 .accordion {
     text-align: center;
 }
