--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,6 +123,7 @@ body {
     background-color: #fff;
 }
 #title {
+    background-color: black;
     font-family: Arial, Helvetica, sans-serif;
     transform: skewX(40deg);
     width: 600px;
