--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,22 +1,32 @@
 nav {
     background-color: rgb(17, 104, 104);
-    text-align: right;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
     position: fixed;
+    top: 0;
     width: 100%;
-    /* height: 40px; */
+    height: fit-content;
     z-index: 7;
     padding: 5px;
     box-shadow: 5px 5px 5px;
 }
 
 nav a {
+    font-size: 13px;
     text-decoration: none;
     color: rgb(212, 219, 226);
-    margin: 10px;
+    margin: 0 10px;
+    border: 2px solid transparent;
+    background: transparent;
+    padding: 8px;
+    border-radius: 12px;
 }
 
 nav a:hover {
-    color: orange;
+    color: white;
+    background: rgb(3, 74, 14);
+    border: 2px solid black;
 }
 
 .accordion {
@@ -44,6 +54,7 @@ body {
 }
 #topDiv {
     /* height: 75vh; */
+    margin-top: 8vh;
     padding-top: 1vh;
     background-size: 100% 75%;
     background-repeat: no-repeat;
