--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,8 +35,13 @@ a {
 }
 body {
     background-image: linear-gradient(24deg, white 50%, darkcyan 85%, black 110%);
-    height: 250vh;
+    height: 170vh;
 }
+
+body::-webkit-scrollbar {
+    display: none;
+}
+
 #accordionExample {
     display:flex;
     width: fit-content;
@@ -225,14 +230,7 @@ body {
     right: 15px;
     bottom: 10px;
 }
-.carousel {
-    box-shadow: 5px 5px 20px black;
-    transform-origin: 50% 50%;
-    border-radius: 12px;
-    overflow: hidden;
-    margin: 5% auto;
-    width: 80%;
-}
+
 .textShadow {
     fill: red;
     stroke:black;
@@ -476,8 +474,16 @@ body {
     font-size: 3rem;
     font-weight: bolder;
 }
+.carousel {
+    box-shadow: 5px 5px 20px black;
+    transform-origin: 50% 50%;
+    border-radius: 12px;
+    overflow: hidden;
+    margin: 5% auto;
+    width: 70%;
+}
 .caroImg {
-    height: 60vh;
+    height: 65vh;
     animation: caroImg 10s;
 }
 @keyframes caroImg {
@@ -711,7 +717,7 @@ body {
         padding: 5%;
     }
     .carousel {
-        width: 95%;
+        width: 90%;
     }
     #accordionExample {
         /* display: block; */
