--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -719,17 +719,13 @@ body::-webkit-scrollbar {
         height: 400px;
     }
     #accordionExample {
-        /* display: block; */
         position: relative;
     }
-    #accordionExample div:nth-child(1) {
+    #accordionExample div:nth-child(2) {
         order: 3;
     }
-    #accordionExample div:nth-child(2) {
+    #accordionExample div:nth-child(1) {
         order: 2;
-    }
-    #accordionExample div:nth-child(3) {
-        order: 1;
     }
     .accordion-item:nth-child(n+2) {
         margin: 0;
@@ -750,6 +746,11 @@ body::-webkit-scrollbar {
     #calenImg, #evalImg {
         display: none;
     }
+
+    .carousel {
+        width: 95%;
+    }
+
     @keyframes hours {
         0% {
             transform: rotate(6deg);
@@ -782,24 +783,34 @@ body::-webkit-scrollbar {
             transform: rotate(100deg);
         }
         50% {
-            transform: rotate(90deg);
-        }
-        60% {
-            transform: translateY(27vh) translateX(-50%);
-        }
-        61% {
-            transform: translateY(25vh) translateX(-50%);
-        }
-        62% {
-            transform: translateY(27vh) translateX(-50%);
+            transform: rotate(90deg) translateY(0);
+            
         }
         65% {
-            transform: translateY(27vh) translateX(-50%);
             opacity: 1;
+            transform:scale(100%) rotate(90deg) translateX(0);
+        }
+        80% {
+            opacity: 0;
+            transform:rotate(90deg) translateX(5px) scale(200%);
         }
         100% {
             opacity: 0;
-            transform: translate(-400%, 27vh) scaleX(6);
         }
     }
+
+    @keyframes type {
+        0% {
+            opacity: 0;
+            transform:translateY(-40px);
+        }
+        90% {
+            opacity: 0;
+            transform:scale(80%) translateY(-40px);
+        }
+        100% {
+            transform:translateY(0);
+        }
+    }
+
 }
