--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 nav {
-    background-color: rgb(17, 104, 104);
+    /* background-color: rgb(17, 104, 104); */
     display: flex;
     justify-content: flex-end;
     align-items: center;
@@ -7,7 +7,7 @@ nav {
     height: fit-content;
     z-index: 7;
     padding: 5px;
-    box-shadow: 5px 5px 5px;
+    /* box-shadow: 5px 5px 5px; */
 }
 
 nav a {
@@ -34,7 +34,7 @@ a {
     color: black;
 }
 body {
-    background-image: linear-gradient(24deg, white 50%, darkcyan 85%, black 110%);
+    background-image: linear-gradient(24deg, white 50%, #0e5daf 85%, black 110%);
     height: 1200px;
     background-size: 100% 200vh;
 }
@@ -369,10 +369,16 @@ body::-webkit-scrollbar {
     width: 100%;
     border-radius: 12px;
 }
+
 #hours {
     position: relative;
     z-index: 2;
+    height: 60px;
+    width: 115px;
+    margin-left: 10px;
+    margin-top: 10px;
 }
+
 .hours {
     display: inline-block;
     position: relative;
@@ -380,6 +386,11 @@ body::-webkit-scrollbar {
     z-index: 1;
     transform-origin: -20%;
     animation: hours 3.5s 8s;
+}
+
+.hours g text {
+    font-size: 3rem;
+    font-weight: bolder;
 }
 .child_1 {
     cx: 50%;
@@ -457,14 +468,7 @@ body::-webkit-scrollbar {
     cy: 50%;
     fill: orange;
 }
-#hours {
-    height: 50px;
-    width: 110px;
-}
-.hours g text {
-    font-size: 3rem;
-    font-weight: bolder;
-}
+
 .carousel {
     box-shadow: 5px 5px 20px black;
     transform-origin: 50% 50%;
