--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,21 @@
+/* * {
+    border: 2px dotted red;
+} */
+
+body {
+    background-image: linear-gradient(24deg, white 35%, #0e5daf 90%, black 110%);
+    height: 1200px;
+    background-size: 100% 200vh;
+    font-family: Abril Fatface, Arial, sans-serif;
+}
+
+body::-webkit-scrollbar {
+    display: none;
+}
+
 nav {
-    /* background-color: rgb(17, 104, 104); */
+    position: fixed;
+    top: 0;
     display: flex;
     justify-content: flex-end;
     align-items: center;
@@ -7,10 +23,9 @@ nav {
     height: fit-content;
     z-index: 7;
     padding: 5px;
-    /* box-shadow: 5px 5px 5px; */
 }
 
-nav a {
+nav button {
     font-size: 1.2rem;
     text-decoration: none;
     color: rgb(212, 219, 226);
@@ -22,10 +37,23 @@ nav a {
     font-family: Abril Fatface, Arial, sans-serif;
 }
 
-nav a:hover {
+nav button:hover {
     color: white;
     background: rgb(3, 74, 14);
     border: 2px solid black;
+}
+
+.studentModal {
+    width: 900px;
+    margin: 0 auto;
+}
+
+#exampleModalLabel {
+    margin: 0 auto 0 325px;
+}
+
+.professionalModal button {
+    border: 2px solid red;
 }
 
 .accordion {
@@ -33,16 +61,6 @@ nav a:hover {
 }
 a {
     color: black;
-}
-body {
-    background-image: linear-gradient(24deg, white 35%, #0e5daf 90%, black 110%);
-    height: 1200px;
-    background-size: 100% 200vh;
-    font-family: Abril Fatface, Arial, sans-serif;
-}
-
-body::-webkit-scrollbar {
-    display: none;
 }
 
 #accordionExample {
@@ -74,6 +92,7 @@ body::-webkit-scrollbar {
 
     text-decoration: none;
 }
+
 .linkImg h6 {
     position: relative;
     display: none;
@@ -86,6 +105,7 @@ body::-webkit-scrollbar {
     border: 1px solid black;
     z-index: 6;
 }
+
 .linkImg2 {
     z-index: 5;
     color: black;
@@ -96,6 +116,7 @@ body::-webkit-scrollbar {
     width: 50px;
     height: 40px;
 }
+
 .linkImg2 h6 {
     z-index: 6;
     display: none;
@@ -108,15 +129,18 @@ body::-webkit-scrollbar {
     width: 163px;
     border: 1px solid black;
 }
+
 #calenImg {
     width: 50px;
     border: 2px solid black;
     border-radius: 5px;
     /* opacity: .8; */
 }
+
 .linkImg:hover h6,.linkImg2:hover h6 {
     display:block;
 }
+
 #evalImg {
     /* position: fixed; */
     top: 75px;
@@ -127,6 +151,7 @@ body::-webkit-scrollbar {
     border-radius: 4px;
     border: 1px solid black;
 }
+
 #scheImg {
     width: 200px;
     border: 2px solid black;
@@ -136,12 +161,14 @@ body::-webkit-scrollbar {
     top: 50px;
     background-color: #fff;
 }
+
 #title {
     background-color: black;
     font-family: Arial, Helvetica, sans-serif;
     transform: skewX(40deg);
-    width: 600px;
-    box-shadow: -25px 15px 5px gray;
+    width: 650px;
+    height: 150px;
+    box-shadow: -25px 15px 5px grey;
     border-top: 4px solid #a39f9f;
     border-right: 4px solid #a39f9f;
     border-left: 4px solid red;
@@ -150,6 +177,7 @@ body::-webkit-scrollbar {
     padding: 10px 40px;
     text-anchor: middle;
 }
+
 #title h4, #title a {
     transform: skewX(-40deg);
     font-size: 1.8rem;
@@ -264,7 +292,7 @@ body::-webkit-scrollbar {
 }
 
 .type p {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     line-height: 1.6;
     animation: scroll 10s linear;
     position: absolute;
@@ -277,6 +305,89 @@ body::-webkit-scrollbar {
     margin: 10px;
     /* position: relative;
     left: 60px; */
+}
+
+#analyst, #developer, #evaluation {
+    background-image: url(../images/Data-Analytics.png);
+    background-size: 100% 100%;
+    margin-top: 50px;
+    position: relative;
+    height: 150px;
+    width: 300px;
+}
+
+#analyst {
+    left: 50px;
+}
+
+#developer {
+    background-image: url(../images/Web-Development.png);
+}
+
+#evaluation {
+    left: 50px;
+    background-image: url(../images/evaluation1.png);
+}
+
+#developer h6, #analyst h6, #evaluation h6 {
+    position: absolute;
+    font-size: 1rem;
+    color: black;
+    top: -25px;
+    width: 100%;
+}
+
+.evalTitle {
+    margin-top: 35px;
+}
+
+.scheduleDiv {
+    position: relative;
+}
+
+.scheduleDiv h2 {
+    text-align-last: left;
+}
+
+.scheduleDev {
+    position: absolute;
+    top: 57px;
+    left: 500px;
+}
+
+.knowledgeDiv {
+    position: relative;
+}
+
+.analyticDiv, .webDiv {
+    text-align-last: left;
+    font-family: serif;
+    background-color: lightgray;
+    padding: 10px;
+    border-radius: 8px;
+    width: 300px;
+    border: 2px solid black;
+}
+
+.analyticDiv {
+    position: absolute;
+    right: 200px;
+}
+
+.webDiv {
+    position: relative;
+    left: 200px;
+}
+
+#collapseTwo button {
+    border: 2px solid black;
+    border-radius: 8px;
+}
+
+#collapseThree button {
+    border: 2px solid red;
+    border-radius: 8px;
+    left: 0;
 }
 
 @keyframes scroll {
@@ -313,11 +424,11 @@ body::-webkit-scrollbar {
     z-index: 1;
     color: white;
     margin: 0 auto;
-    height: 9rem;
+    height: 150px;
     font-family: Arial, Helvetica, sans-serif;
     transform: skewX(-40deg);
     background: black;
-    width: 600px;
+    width: 650px;
     box-shadow: -25px 15px 5px grey;
     border-right: 4px solid #a39f9f;
     border-left: 4px solid red;
