--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,7 +26,7 @@ nav {
 }
 
 nav button {
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     text-decoration: none;
     color: rgb(212, 219, 226);
     margin: 0 10px;
@@ -50,13 +50,13 @@ nav button:hover {
 
 .forStudents {
     color: red;
-    font-size: .9rem;
+    font-size: 1.2rem;
     font-family: sans-serif;
 }
 
 .forStudents2 {
     color: white;
-    font-size: 0.9rem;
+    font-size: 1.2rem;
     font-family: sans-serif;
     width: 875px;
     text-align: left;
@@ -72,9 +72,12 @@ nav button:hover {
     border: 2px solid red;
 }
 
-.accordion {
-    text-align: center;
+.accordion-button {
+    background: #e7f1ff;
+    width: 100%;
+    /* border: 2px solid black; */
 }
+
 a {
     color: black;
 }
@@ -82,6 +85,7 @@ a {
 #accordionExample {
     display:flex;
     width: fit-content;
+    margin-bottom: 25px;
 }
 .accordion-button:focus {
     border: none;
@@ -166,6 +170,12 @@ a {
     /* opacity: .8; */
     border-radius: 4px;
     border: 1px solid black;
+}
+
+#headingTwo {
+    position: relative;
+    z-index: 8;
+    background: white;
 }
 
 #scheImg {
@@ -316,11 +326,23 @@ a {
     font-family: Abril Fatface, Arial, sans-serif;
 }
 
+.accordion-flush .accordion-item:last-of-type .accordion-button.collapsed {
+    border: 2px solid black;
+    border-radius: 8px;
+    height: 50px;
+}
+
+.accordion-button, .collapsed {
+    height: 50px;
+    /* border: 2px solid black; */
+    /* border-radius: 8px; */
+}
+
 .accordion-item {
     max-width: 400px;
-    margin: 10px;
-    /* position: relative;
-    left: 60px; */
+    margin: 15px 20px 0px 20px;
+    width: 250px;
+    border-radius: 8px;
 }
 
 #analyst, #developer, #evaluation {
@@ -330,10 +352,6 @@ a {
     position: relative;
     height: 150px;
     width: 300px;
-}
-
-#analyst {
-    left: 50px;
 }
 
 #developer {
@@ -359,16 +377,13 @@ a {
 
 .scheduleDiv {
     position: relative;
+    display: flex;
+    justify-content: space-around;
+    width: 800px;
 }
 
 .scheduleDiv h2 {
     text-align-last: left;
-}
-
-.scheduleDev {
-    position: absolute;
-    top: 118px;
-    left: 500px;
 }
 
 #collapseTwo .scheduleDev {
@@ -624,7 +639,7 @@ a {
     border-radius: 12px;
     overflow: hidden;
     margin: 5% auto;
-    width: 700px;
+    width: 900px;
     border: 2px solid black;
     animation: carousel 5s;
 }
@@ -798,6 +813,28 @@ a {
         opacity: 0;
     }
 }
+
+@media screen and (max-width: 1100px) {
+    .carousel {
+        width: 700px;
+    }
+
+    #exampleModal .scheduleDev {
+        position: absolute;
+        top: 118px;
+        left: 400px;
+    }
+
+    #exampleModal #analyst {
+        left: 25px;
+    }
+
+    #exampleModal #evaluation {
+        left: 25px;
+    }
+}
+
+
 @media screen and (max-width: 576px) {
     body {
         height: 110vh;
