--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -222,6 +222,8 @@ a {
     border-radius: 15px 15px;
     padding: 10px 40px;
     text-anchor: middle;
+    position: relative;
+    z-index: 2;
 }
 
 #title p, #title a {
@@ -229,6 +231,17 @@ a {
     font-size: 1.8rem;
     font-family: Abril Fatface, Arial, sans-serif;
 }
+
+#title button {
+    width: fit-content;
+    font-size: 1.2rem;
+    background: transparent;
+    color: white;
+    border: 2px solid white;
+    border-radius: 12px;
+    height: 35px;
+}
+
 .modal-dialog {
     max-width: 80%;
 }
