--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -213,8 +213,7 @@ a {
     font-family: Arial, Helvetica, sans-serif;
     transform: skewX(40deg);
     width: 650px;
-    height: 150px;
-    box-shadow: -25px 15px 5px grey;
+    height: 170px;
     border-top: 4px solid #a39f9f;
     border-right: 4px solid #a39f9f;
     border-left: 4px solid red;
@@ -236,10 +235,24 @@ a {
     width: fit-content;
     font-size: 1.2rem;
     background: transparent;
-    color: white;
-    border: 2px solid white;
+    color: #28b4ff;
+    border: 2px solid #28b4ff;
     border-radius: 12px;
     height: 35px;
+    margin-top: 17px;
+}
+
+.schedule {
+    width: 700px;
+    margin: 0 auto 40px;
+    text-align: center;
+    position: relative;
+    left: 40px;
+}
+
+.schedule div {
+    display: flex;
+    justify-content: space-between;
 }
 
 .modal-dialog {
@@ -439,7 +452,7 @@ a {
     display: flex;
     justify-content: space-around;
     width: 300%;
-    right: 100%;
+    left: -75%;
 }
 
 .analyticDiv, .webDiv {
@@ -507,12 +520,11 @@ a {
     z-index: 1;
     color: white;
     margin: 0 auto;
-    height: 150px;
+    height: 170px;
     font-family: Arial, Helvetica, sans-serif;
     transform: skewX(-40deg);
     background: black;
     width: 650px;
-    box-shadow: -25px 15px 5px grey;
     border-right: 4px solid #a39f9f;
     border-left: 4px solid red;
     border-top: 4px solid red;
@@ -680,7 +692,7 @@ a {
     transform-origin: 50% 50%;
     border-radius: 12px;
     overflow: hidden;
-    margin: 5% auto;
+    margin: 40px auto;
     width: 900px;
     border: 2px solid black;
     animation: carousel 3s;
