--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,10 +103,11 @@ a {
 }
 
 #accordionExample {
-    display:flex;
+    display: flex;
     width: fit-content;
-    margin-bottom: 25px;
+    margin-bottom: 10px;
 }
+
 .accordion-button:focus {
     border: none;
     box-shadow: none;
@@ -248,6 +249,7 @@ a {
     text-align: center;
     position: relative;
     left: 40px;
+    z-index: 2;
 }
 
 .schedule div {
@@ -402,10 +404,10 @@ a {
     border-radius: 8px;
 }
 
-#analyst, #developer, #evaluation {
+#analyst, #developer {
     background-image: url(../images/Data-Analytics.png);
     background-size: 100% 100%;
-    margin-top: 50px;
+    margin-top: 40px;
     position: relative;
     height: 150px;
     width: 300px;
@@ -415,12 +417,7 @@ a {
     background-image: url(../images/Web-Development.png);
 }
 
-#evaluation {
-    left: 50px;
-    background-image: url(../images/evaluation1.png);
-}
-
-#developer h6, #analyst h6, #evaluation h6 {
+#developer h6, #analyst h6 {
     position: absolute;
     font-size: 1rem;
     color: black;
@@ -432,18 +429,7 @@ a {
     margin-top: 35px;
 }
 
-.scheduleDiv {
-    position: relative;
-    display: flex;
-    justify-content: space-around;
-    width: 800px;
-}
-
-.scheduleDiv h2 {
-    text-align-last: left;
-}
-
-#collapseTwo .scheduleDev {
+#collapseTwo {
     top: 139px;
 }
 
@@ -905,7 +891,7 @@ a {
         left: 25px;
     }
 
-    .studentModal .scheduleDiv {
+    .studentModal {
         justify-content: space-between;
         width: 670px;
     }
@@ -915,6 +901,18 @@ a {
 
     body {
         background-size: 100% 600vh;
+    }
+
+    .child_5 {
+        fill: #0c4e93;
+    }
+
+    .child_6 {
+        fill: #0c4e93;
+    }
+
+    .child_8 {
+        fill: #0c4e93;
     }
     
     #exampleModalLabel {
@@ -939,17 +937,19 @@ a {
 
     .sessions h4 {
         font-size: 2.2rem;
-        margin-top: 80px;
+        margin-bottom: 50px;
     }
 
-    .scheduleDiv {
-        justify-content: space-between;
+    .schedule {
         width: 550px;
-        margin-left: 50px;
+        margin: 0 auto 40px;
+        text-align: center;
+        position: relative;
+        left: 60px;
     }
 
-    .professionalDiv {
-        padding-left: 80px;
+    h3 {
+        font-size: 1.3rem;
     }
 
     #topDiv {
@@ -966,8 +966,8 @@ a {
         justify-content: space-around;
     }
 
-    #analyst, #developer, #evaluation {
-        width: 200px;
+    #analyst, #developer {
+        width: 250px;
     }
 
     .forStudents {
@@ -1191,12 +1191,6 @@ a {
         font-size: .88rem;
         width: auto;
         padding: 0;
-    }
-
-    .scheduleDiv {
-        width: auto;
-        flex-direction: column;
-        align-items: center;
     }
 
     #evaluation {
