--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -224,6 +224,10 @@ a {
     left: 40px;
     z-index: 2;
 }
+.scheduleTitle1, .scheduleTitle2 {
+    color: black;
+    margin-bottom: 20px;
+}
 
 .scheduleTitle2 {
     display: none;
@@ -384,22 +388,27 @@ a {
 #analyst, #developer {
     background-image: url(../images/Data-Analytics.png);
     background-size: 100% 100%;
-    margin-top: 40px;
+    margin-top: 10px;
+    margin-bottom: 30px;
     position: relative;
     height: 150px;
     width: 300px;
     box-shadow: -20px 20px 20px #00000080;
 }
 
+#analyst:hover, #developer:hover {
+    filter: brightness(1.3);
+}
+
 #developer {
     background-image: url(../images/Web-Development.png);
 }
 
-#developer h6, #analyst h6 {
+#developer h3, #analyst h3 {
     position: absolute;
-    font-size: 1rem;
+    font-size: 1.5rem;
     color: black;
-    top: -25px;
+    bottom: -50px;
     width: 100%;
 }
 
@@ -1149,6 +1158,9 @@ a {
         right: 0;
     }
     
+    #developer {
+        margin-top: 40px;
+    }
 
     .carousel {
         width: 95%;
