--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,10 @@ body::-webkit-scrollbar {
     opacity: 0.85;
 }
 
+#emailUs img:hover {
+    opacity: 1;
+}
+
 #emailBtn {
     width: 100%;
     background: #024f95;
