--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,11 @@
     border: 2px dotted red;
 } */
 
+:root {
+    --x: 100px;
+    --y: 50px;
+}
+
 body {
     background-image: linear-gradient(24deg, white 35%, #0e5daf 90%, black 110%);
     height: 1200px;
@@ -9,27 +14,91 @@ body {
     font-family: Abril Fatface, Arial, sans-serif;
 }
 
-.accordion-item:last-of-type .accordion-collapse {
-    border-bottom-width: 0px;
-}
-
 body::-webkit-scrollbar {
     display: none;
 }
 
-#emailUs {
+#sale {
     position: absolute;
-    top: 20px;
-    right: 30px;
+    z-index: 3;
+    top: var(--y);
+    left: var(--x);
+    filter:grayscale(.5);
+    animation: sale1 50s infinite;
+    /* animation: sale2 2s infinite; */
 }
 
-#emailUs img {
+@keyframes sale1 {
+    
+    10% {
+        top: calc(var(--y) + 75px);
+        left: calc(var(--x) + 50px);
+    }
+    
+    30% {
+        top: calc(var(--y) + 50px);
+        left: calc(var(--x) + 100px);
+        transform: scale(1.5);
+    }
+    
+    40% {
+        transform: scale(1);
+        top: calc(var(--y) + 50px);
+        left: calc(var(--x) + 100px);
+    }
+    
+    55% {
+        top: calc(var(--y) + 30px);
+        left: calc(var(--x) + 50px);
+    }
+
+    
+    75% {
+        transform: scale(1.3);
+        top: calc(var(--y) + 30px);
+        left: calc(var(--x) + 50px);
+    }
+
+    
+    
+}
+
+@keyframes sale2 {
+    
+    75% {
+        transform: scale(.95);
+    }
+}
+
+#sale:hover {
+    filter:hue-rotate(180deg);
+}
+
+
+#sale img {
+    width: 150px;
+    filter: drop-shadow(10px 10px 3px black);
+}
+
+
+
+#emailUs {
+    position: absolute;
+    top: 65px;
+    right: 90px;
+    filter: grayscale(0.4) drop-shadow(3px 4px 0px #531420);
     width: 170px;
     opacity: 0.85;
 }
 
-#emailUs img:hover {
-    opacity: 1;
+#emailUs:hover {
+    cursor: pointer;
+    filter: drop-shadow(3px 4px 0px #531420) brightness(1.5);
+    /* filter: grayscale(0.4) drop-shadow(3px 4px 0px #531420) hue-rotate(100deg); */
+}
+
+#emailUs img {
+    width: 100%;
 }
 
 #emailBtn {
@@ -42,53 +111,10 @@ body::-webkit-scrollbar {
     display: none;
 }
 
-#collapseTwo h2, #collapseThree h2 {
-    width: 400px;
-}
-
-.professionalDiv {
-    position: relative;
-    right: 550px;
-    margin-top: 25px;
-    text-align: center;
-}
-
-#exampleModalLabel {
-    margin: 0 0 25px 0;
-    position: relative;
-    width: 800px;
-    text-align: center;
-
-}
-
-#exampleModalLabel2 {
-    display: none;
-}
-
-.professionalModal button {
-    border: 2px solid red;
-}
-
-.accordion-button {
-    background: #e7f1ff;
-    width: 100%;
-    /* border: 2px solid black; */
-}
-
 a {
     color: black;
 }
 
-#accordionExample {
-    display: flex;
-    width: fit-content;
-    margin-bottom: 10px;
-}
-
-.accordion-button:focus {
-    border: none;
-    box-shadow: none;
-}
 .img {
     border: 2px solid black;
     border-radius: 12px;
@@ -242,13 +268,6 @@ a {
     justify-content: space-between;
 }
 
-.modal-dialog {
-    max-width: 80%;
-}
-.accordion {
-    width: 20rem;
-    margin: 0 auto;
-}
 .sessions {
     margin: 7vh 0;
     text-shadow: 5px 5px 5px black;
@@ -337,6 +356,10 @@ a {
     position: absolute;
     right: 15px;
     bottom: 4px;
+}
+
+.titleImg1:hover {
+    scale: 1.5;
 }
 
 .textShadow {
@@ -583,6 +606,7 @@ a {
     margin-left: 10px;
     margin-top: 10px;
     font-family:sans-serif;
+    filter: grayscale(.4);
 }
 
 .hours {
@@ -791,6 +815,7 @@ a {
     background: orange;
     opacity: 0;
     animation: fire 6s 1s;
+    filter: grayscale(.3);
 }
 @keyframes fire {
     0% {
@@ -874,28 +899,60 @@ a {
     }
 }
 
+/* #myModal {
+    position: fixed;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    padding-top: 5%;
+    z-index: 4;
+    border: 2px dotted red;
+    background: rgba(0, 0, 0, 0.71);
+}  */
+
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 4; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  
+  /* Modal Content/Box */
+  .modal-content {
+    background-color: rgba(0, 0, 0, 0);
+    padding: 0;
+    margin: 5% auto;
+    /* border: 1px solid #888; */
+    width: 1100px;
+  }
+  
+  .close {
+    color: #aaa;
+    font-size: 60px;
+    font-weight: bold;
+    text-align: right;
+    width: fit-content;
+    margin: 0 10% auto auto;
+}
+
+*, ::after,
+
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
 @media screen and (max-width: 1100px) {
     .carousel {
         width: 700px;
-    }
-
-    #exampleModal .scheduleDev {
-        position: absolute;
-        top: 118px;
-        left: 400px;
-    }
-
-    #exampleModal #analyst {
-        left: 25px;
-    }
-
-    #exampleModal #evaluation {
-        left: 25px;
-    }
-
-    .studentModal {
-        justify-content: space-between;
-        width: 670px;
     }
 }
 
@@ -931,22 +988,6 @@ a {
         fill: #0c4f95;
     }
     
-    #exampleModalLabel {
-        width: 650px;
-        font-size: 1.4rem;
-    }
-    
-    #accordionExample {
-        width: 100%;
-        margin: 25px auto;
-        justify-content: space-around;
-    }
-
-    .accordion-item {
-        margin: 0 auto;
-        width: 220px;
-    }
-
     .mx-auto {
         font-size: 1.2rem;
     }
@@ -974,12 +1015,6 @@ a {
 
     .forStudents2 {
         width: 700px;
-    }
-
-    .studentModal .scheduleDiv {
-        width: 100%;
-        margin-left: 0;
-        justify-content: space-around;
     }
 
     #analyst, #developer {
@@ -1031,24 +1066,6 @@ a {
         fill: #0b4581;
     }
     
-
-    #exampleModalLabel {
-        display: none;
-    }
-
-    #exampleModalLabel2 {
-        display: block;
-        width: 350px;
-        font-size: 1.2rem;
-        margin-bottom: 20px;
-    }
-
-    #collapseTwo h2, #collapseThree h2 {
-        width: 350px;
-        text-align: left;
-        font-size: 1.9rem;
-    }
-
     nav {
         display: none;
     }
